# TotalMeasure

./: .gitignore  README.md  app.py  deploy.py  main.py  pyproject.toml  requirements.txt
backend/: app.py  logreader.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
myapp/: app.py
