[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ansgar.poelking <merkmich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "==3.0.3"
paramiko = "=3.4.0"
scp = "0.15.0"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
